# ai-essay-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: essay_sketch.ipynb  test.ipynb
src/essay/: __init__.py  agent.py  app.py  gui.py  prompts.py
